--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Adivina el número</title>
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-  
+  <main>
+    <h1>Adivina el número</h1>
+    <form action="" class="form">
+      <label for="userNumber">Introduce aquí tu número</label>
+        <input class="input" type="number" name="number" id="userNumber">
+        <button class="button" type="submit">Prueba</button>
+    </form>
+    <div class="divs">
+      <p>Pista: Escribe el número y dale a Prueba</p>
+    </div>
+    <div class="divs">
+      <p>Número de intentos: 0</p>
+    </div>
+  </main>
 
   <script type="text/javascript" src="./js/main.js"></script>
 </body>
