--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>Adivina el número</h1>
     <form action="" class="form">
       <label for="userNumber">Introduce aquí tu número</label>
-        <input class="input" type="number" name="number" id="userNumber">
-        <button class="button" type="submit">Prueba</button>
+        <input class="input js-input" type="number" name="number" id="userNumber">
+        <button class="button js-button" type="submit">Prueba</button>
     </form>
     <div class="divs">
       <p>Pista: Escribe el número y dale a Prueba</p>
