userNumber === randomNumber correct

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button class="button js-button" type="submit">Prueba</button>
     </form>
     <div class="divs">
-      <p>Pista: Escribe el número y dale a Prueba</p>
+      <p class="js-track">Pista: Escribe el número y dale a Prueba</p>
     </div>
     <div class="divs">
       <p>Número de intentos: 0</p>
