number attempts ok

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p class="js-track">Pista: Escribe el número y dale a Prueba</p>
     </div>
     <div class="divs">
-      <p>Número de intentos: 0</p>
+      <p class="js-attempts">Número de intentos: 0</p>
     </div>
   </main>
 
